// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Issue rendering works for minor notifications 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#cb2431",
      "fallback": "[github-slack/public-test] Issue closed by wilhelmklopp",
      "footer": "<https://github.com/github-slack/public-test/issues/1|View it on GitHub>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "[github-slack/public-test] Issue closed by wilhelmklopp",
      "title": "#1 Needs content",
      "title_link": "https://github.com/github-slack/public-test/issues/1",
      "ts": 1508171038,
    },
  ],
}
`;

exports[`Issue rendering works for notification messages 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#36a64f",
      "fallback": "[github-slack/public-test] Issue opened by wilhelmklopp",
      "fields": Array [
        Object {
          "short": true,
          "title": "Assignees",
          "value": "wilhelmklopp",
        },
        Object {
          "short": true,
          "title": "Labels",
          "value": "enhancement, question, wontfix",
        },
      ],
      "footer": "<https://github.com/github-slack/public-test/issues/1|View it on GitHub>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "pretext": "[github-slack/public-test] Issue opened by wilhelmklopp",
      "text": "This repo needs some content, as currently, it does not have **any**.",
      "title": "#1 Needs content",
      "title_link": "https://github.com/github-slack/public-test/issues/1",
      "ts": 1508171038,
    },
  ],
}
`;

exports[`Issue rendering works for unfurls 1`] = `
Object {
  "attachments": Array [
    Object {
      "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
      "author_link": "https://github.com/wilhelmklopp",
      "author_name": "wilhelmklopp",
      "color": "#36a64f",
      "fallback": "#1 Needs content",
      "fields": Array [
        Object {
          "short": true,
          "title": "Assignees",
          "value": "wilhelmklopp",
        },
        Object {
          "short": true,
          "title": "Labels",
          "value": "enhancement, question, wontfix",
        },
      ],
      "footer": "<https://github.com/github-slack/public-test/issues/1|View it on GitHub>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "This repo needs some content, as currently, it does not have **any**.",
      "title": "#1 Needs content",
      "title_link": "https://github.com/github-slack/public-test/issues/1",
      "ts": 1508171038,
    },
  ],
}
`;
